# otus_course_homework_1.2

./: CMakeLists.txt  filter.h  main.cpp
.github/workflows/: release.yml
test/: CMakeLists.txt  test.cpp
